--- a/css/message-box.css
+++ b/css/message-box.css
@@ -6,14 +6,27 @@ body{
     color: #212529;
     text-align: left;
 }
-#box{
-	background-color: rgb(238, 238, 161);
-}
+
 .breadcrumb{
 	margin-bottom: 0;
 }
 
+#box{
+	background-color: rgb(238, 238, 161);
+}
 
+.star{
+    margin-bottom: 6px;
+}
+
+.field-required{
+    color: #FF2D73;
+}
+
+
+.col-form-label{
+    text-align: right;
+}
 
 /* 彈窗 */
 #message-map{
@@ -26,9 +39,8 @@ body{
     z-index: 99;
     width: 50vw;
     height: 30vh;
-	display: none;
+	display: block;
 }
-
 
 #message-map #close-map{
     position: absolute;
@@ -54,9 +66,10 @@ body{
 @media(max-width:768px) {
 	#message-map{
         width: 80%;
-        font-size: 15px;
+        height: 50% ;
+        font-size: 13px;
 	}
     #map{
-        padding: 30px;
+        padding: 40px 30px 0;
     }
 }
